Sat Jun  9 12:51:27 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* silc_server_whois_send_reply crashed the server if the nickname
	  was 127 characters long.  Affected file silcd/command.c.

Thu Jun  7 16:29:56 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added sanity check to the silc_server_new_client. If the hostname
	  is provided inside username then check that the provided hostname
	  really is the same as the resolved one.  If the hostname was not
	  resolved then check it from the public key.  Affected file is
	  silcd/packet_receive.c.

	* Fixed a fatal bug in Irssi SILC client. Do not send QUIT command
	  if the server disconnected us and the connection is not valid
	  anymore.  Affected file irssi/src/silc/core/silc-channels.c.

 	* Moved the silc_client_[chmode|chumode|chumode_char] away from
	  the library to the lib/silcutil/silcutil.[ch].

Thu Jun  7 08:57:16 CEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Close log file after open.  Affected file 
	  lib/silcutil/silclog.c.

	* Check whether sock == NULL in silc_client_send_packet and return
	  if it is.  Affected file lib/silcclient/silcclient.c.

	* Check rec->entry == NULL in the Irssi SILC Client before
	  sending the channel message.  Affecte file is
	  irssi/src/silc/core/silc-servers.c.

Tue Jun  5 08:08:21 CEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Merged a splitted window bugfix from Irssi CVS tree.  The 
	  affected file is irssi/src/fe-text/textbuffer-view.c.

	* Fixed the ME, ACTION and NOTICE printing in Irssi Client.
	  It did not print nickname.

	* Improved the distributions system a bit.

Mon Jun  4 17:57:16 CEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Merged /WINDOW bugfix from irssi CVS tree. Affected file is
	  irssi/src/fe-text/gui-window.c.

	* Fixed a fatal bug in Irssi SILC client. Crashed if sent message
	  to in-active server.  The affected file is
	  irssi/src/silc/core/client_ops.c.
